fix sidebar overflow on popup

--- a/plugins/bootstrap/css/bootstrap.css
+++ b/plugins/bootstrap/css/bootstrap.css
@@ -5875,7 +5875,7 @@ button.close {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1050;
+  z-index: 10000 !important;
   display: none;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
